# squirrel

./: -  .audit-complete  .audit-tracker  .clippy.toml  .docs_cleaned  .docs_updated_nov_25.txt  .documentation-map.txt  .gitignore  .rustfmt.toml  .session_complete.txt  .workspace-clean  ACHIEVEMENT_UNLOCKED_A_PLUS_PLUS.md  ACTIONRESULT_INVESTIGATION.md  ACTION_ITEMS_DEC_22_2025.md  AI_ARCHITECTURE_CLARIFICATION_JAN_20_2026.md  AI_CAPABILITY_ADAPTERS_JAN_20_2026.md  AI_DELEGATION_TO_SONGBIRD_EXECUTION_PLAN_JAN_19_2026.md  AI_PROVIDER_ARCHITECTURAL_ISSUE_JAN_16_2026.md  AI_ROUTER_EVOLUTION_JAN_20_2026.md  ALL_COMPLETE_FEB_1_2026.md  ALL_DOCUMENTS_INDEX.md  ALL_SESSIONS_COMPLETE_NOV_8_2025.md  ARCHIVE_CLEANUP_COMPLETE_JAN_20_2026.md  ARCHIVE_CLEANUP_FINAL_JAN_20_2026.md  ARCHIVE_CLEANUP_JAN_30_2026.md  ARCHIVE_CLEANUP_JAN_31_2026_v2.md  ARCHIVE_CLEANUP_PLAN_JAN_20_2026.md  ARCHIVE_CLEANUP_PLAN_JAN_31_2026.md  ARCHIVE_CLEANUP_SUMMARY_JAN_27_2026.md  ARCHIVE_CODE_CLEANUP_ANALYSIS_JAN_19_2026.md  ARCHIVE_CODE_CLEANUP_COMPLETE_JAN_10_2026.md  ARCHIVE_CODE_CLEANUP_JAN_19_2026_FINAL.md  ARCHIVE_CODE_CLEANUP_PLAN_JAN_20_2026_FINAL.md  ARCHIVE_CODE_REVIEW_JAN_29_2026.md  ARCHIVE_CODE_TODO_CLEANUP_REVIEW_JAN_30_2026.md  ARCHIVE_INDEX.md  ARCHIVE_REVIEW_JAN_28.md  ARC_STR_MODERNIZATION_ROADMAP.md  ARC_STR_MODERNIZATION_SUCCESS_REPORT.md  ARC_STR_OPTIMIZATION_ANALYSIS.md  (+688 more)
config/: Cargo.toml  capability_registry.toml  clippy_session_errors.json  config.example.toml  development.toml  package-lock.json  production.toml  pyproject.toml  songbird-ai-proxy-example.yaml  testing.toml  vite.config.ts
config/misc/: .clippy.toml  jest.config.js  jest.setup.js  package.json
config/src/: environment.rs  lib.rs
crates/adapter-pattern-examples/: Cargo.toml  README.md
crates/adapter-pattern-examples/src/: command.rs  lib.rs  mcp.rs  plugin.rs  registry.rs
crates/adapter-pattern-tests/: Cargo.toml
crates/adapter-pattern-tests/examples/: adapter_demo.rs  advanced_adapter_demo.rs
crates/adapter-pattern-tests/src/: auth.rs  auth_tests.rs  commands.rs  integration.rs  lib.rs  tests.rs  types.rs
crates/adapter-test/: Cargo.toml  README.md
crates/adapter-test/examples/: basic_usage.rs
crates/adapter-test/src/: lib.rs
crates/adapter-tests/: Cargo.toml  README.md  TESTING.md
crates/adapter-tests/examples/: adapter_showcase.rs  basic.rs
crates/adapter-tests/src/: command.rs  error.rs  lib.rs  registry.rs
crates/adapter-tests/tests/: adapter_integration_test.rs  adapter_mock_test.rs
crates/ai-tools/: Cargo.toml
crates/ai-tools/src/: config.rs  error.rs  lib.rs
crates/ai-tools/tests/: config_integration_test.rs  openai_live_test.rs  openai_test.rs
crates/ai_tools/: Cargo.toml  README.md
crates/ai_tools/src/: error.rs  lib.rs
crates/api-clients/: Cargo.toml  README.md
crates/api-clients/src/: error.rs  lib.rs
crates/api_clients/: Cargo.toml
crates/api_clients/src/: error.rs  lib.rs
crates/app/: Cargo.toml
crates/app/src/: adapter.rs  bin.rs  config.rs  core.rs  lib.rs  mod.rs  plugin.rs
crates/cli/: Cargo.toml
crates/cli/src/: config.rs  formatter.rs  lib.rs  main.rs
crates/cli/tests/: README.md  adapter_tests.rs  cli_end_to_end_tests.rs  concurrency_tests.rs  isolated_adapter_tests.rs  mod.rs  resource_limit_tests.rs  standalone_adapter_tests.rs
crates/commands/: Cargo.toml  README.md
crates/commands/src/: README.md  adapter.rs  auth.rs  builtin.rs  factory.rs  history.rs  hooks.rs  journal.rs  lib.rs  lifecycle.rs  mod.rs  observability.rs  registry.rs  suggestions.rs  transaction.rs  validation.rs
crates/config/: CONSTANTS_DOMAIN_ANALYSIS.md  Cargo.toml  ENVIRONMENT_GUIDE.md  VALIDATION_GUIDE.md  port-config.example.toml  tasks.json  tsconfig.test.json  universal-security-discovery.example.toml
crates/config/misc/: otel-collector-config.yaml
crates/config/src/: compat.rs  constants.rs  environment.rs  environment_config.rs  environment_config_tests.rs  environment_tests.rs  lib.rs  service_endpoints.rs
crates/context/: Cargo.toml  README.md
crates/context/examples/: basic_usage.rs  plugin_usage.rs
crates/context/src/: README.md  adapter.rs  error.rs  lib.rs  persistence.rs  recovery.rs  sync.rs  tracker.rs
crates/context_adapter/: Cargo.toml
crates/context_adapter/src/: adapter.rs
crates/core/: Cargo.toml  Cargo.toml.bak  build.rs  demo-status.md  enhanced-routing-demo  mod_backup.rs  quick-demo  quick-demo.rs  simple-routing-demo.rs
crates/core/auth/: Cargo.toml
crates/core/context/: Cargo.toml
crates/core/core/: Cargo.toml
crates/core/examples/: core_monitoring_integration.rs  factory_test.rs
crates/core/interfaces/: Cargo.toml  MIGRATION_PLAN.md
crates/core/mcp/: Cargo.toml  README.md  build.rs
crates/core/plugins/: Cargo.toml  PLUGIN_CLEANUP_STRATEGY.md  UNIFIED_MANAGER_IMPLEMENTATION_PLAN.md
crates/core/src/: error.rs  lib.rs  main.rs
crates/dashboard-core/: Cargo.toml  README.md
crates/dashboard-core/examples/: dashboard_monitoring_integration.rs
crates/dashboard-core/src/: config.rs  data.rs  error.rs  health.rs  lib.rs  mcp.rs  monitoring.rs  service.rs  update.rs
crates/ecosystem-api/: Cargo.toml
crates/ecosystem-api/src/: client.rs  client_mock.rs  client_types.rs  config.rs  (+6 more)
crates/example-plugins/: Cargo.toml
crates/galaxy/: CHANGELOG.md  Cargo.toml  README.md  SECURITY.md
crates/integration/: Cargo.toml  README.md
crates/interfaces/: Cargo.toml
crates/interfaces-test-workspace/: Cargo.toml
crates/main/: Cargo.toml
fuzz/: Cargo.toml  README.md  ci_fuzzing.yml  run_fuzzers.ps1  run_fuzzers.sh
fuzz/fuzz_targets/: dynamic_library.rs  plugin_command.rs
fuzz_old/: Cargo.toml  README.md  ci_fuzzing.yml  dynamic_library.rs  plugin_command.rs  run_fuzzers.ps1  run_fuzzers.sh
standalone_server/: Cargo.toml  README.md  build.rs
standalone_server/examples/: python_watch_task.py
standalone_server/proto/: mcp_task.proto
standalone_server/src/: client.rs  lib.rs  main.rs  python.rs
standalone_server/tests/: run_test.sh
test_plugin_fix/: Cargo.toml  README.md
test_plugin_fix/src/: main.rs
(+4631 files in other folders)
