[workspace]
resolver = "2"
members = [
    # Main application
    "crates/main",
    
    # Core components
    "crates/core/interfaces",
    "crates/core/context",
    "crates/core/mcp",
    "crates/core/core",
    "crates/core/plugins",
    "crates/core/auth",
    
    # Integration components (vendor-agnostic patterns)
    "crates/integration/context-adapter",
    "crates/integration/ecosystem",
    
    # Service components
    "crates/services/commands",
    
    # Tool components
    "crates/tools/ai-tools",
    "crates/tools/cli",
    "crates/tools/rule-system",
    
    # SDK components
    "crates/sdk",
    
    # Configuration
    "crates/config",
    
    # Universal
    "crates/universal-patterns",
    "crates/universal-constants",
    "crates/universal-error",
    
    # Ecosystem API
    "crates/ecosystem-api",
    
    # Adapter patterns
    "crates/adapter-pattern-examples",
    "crates/adapter-pattern-tests",
]

[workspace.package]
authors = ["ecoPrimals Contributors"]
edition = "2024"
license = "AGPL-3.0-only"
version = "0.1.0"

[workspace.dependencies]
# Core dependencies - shared across workspace
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
futures = "0.3"
tracing = { version = "0.1", features = ["log"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
# reqwest REMOVED from workspace - each crate declares it optionally for TRUE ecoBin!
# Old: reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
# New: Each crate that needs HTTP declares reqwest as optional with feature flags
#
# CRYPTO: reqwest 0.12 → rustls 0.23 (pluggable crypto). ecoPrimals target: Pure Rust.
# Upgrade path: reqwest 0.12 + rustls-tls-manual-roots-no-provider + rustls-rustcrypto/aws-lc-rs.
# See docs/CRYPTO_MIGRATION.md.
url = "2.4"

# Additional common dependencies
async-recursion = "1.0"
bytes = "1.5"
regex = "1.10"
serde_yaml_ng = "0.10"
parking_lot = "0.12"
dashmap = "5.4"
semver = "1.0"

# More common dependencies
rand = "0.8"
base64 = "0.22"
hex = "0.4"
uuid-serde = "1.0"
nix = { version = "0.27", features = ["user"] }

# Storage and additional dependencies
tracing-subscriber = "0.3"
glob = "0.3"

# Database dependencies
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "sqlite", "uuid", "chrono"] }

# Data structures and caching
lru = "0.12"
indexmap = "2.0"

# Metrics and monitoring
metrics = "0.21"
prometheus = "0.14"

# Security and additional deps
secrecy = { version = "0.8", features = ["serde"] }
zeroize = { version = "1.7", features = ["zeroize_derive"] }
blake3 = "1.5"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
# axum REMOVED - NOT ecoPrimals standard (use JSON-RPC + tarpc!)
# tower REMOVED - NOT ecoPrimals standard  
# tower-http REMOVED - NOT ecoPrimals standard

# CLI and command dependencies
clap = { version = "4.4", features = ["derive"] }

# gRPC REMOVED - NOT ecoPrimals standard!
# ecoPrimals uses JSON-RPC + tarpc for full Rust ecosystem
# prost REMOVED
# prost-types REMOVED  
# tonic REMOVED - gRPC is NOT our protocol!

# System and utility dependencies (ecoBin v3.0: no sysinfo C dep; use universal_constants::sys_info)
argon2 = { version = "0.5", features = ["std"] }
simple_logger = "4.2"

# Dev and test dependencies
tokio-test = "0.4"
mockall = "0.11"
test-case = "3.0"
tempfile = "3.8"
pretty_assertions = "1.4"
test-context = "0.2"
proptest = "1.10.0"

# Benchmarking dependencies
criterion = { version = "0.5", features = ["html_reports"] }

# Internal crate dependencies
squirrel-ai-tools = { path = "crates/tools/ai-tools", version = "0.1.0" }
squirrel-mcp-config = { path = "crates/config", version = "0.1.0" }
squirrel-integration = { path = "crates/integration", version = "0.1.0" }
ecosystem-api = { path = "crates/ecosystem-api", version = "0.1.0" }
squirrel-interfaces = { path = "crates/core/interfaces", version = "0.1.0" }
squirrel-context = { path = "crates/core/context", version = "0.1.0" }
squirrel-universal-patterns = { path = "crates/universal-patterns", version = "0.1.0" }
squirrel-sdk = { path = "crates/sdk", version = "1.0.0" }
squirrel-plugins = { path = "crates/core/plugins", version = "0.1.0" }

[workspace.lints.rust]
missing_docs = "warn"
unused_imports = "warn"
unused_variables = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
expect_used = "deny"
unwrap_used = "deny"
missing_docs_in_private_items = "allow"
module_name_repetitions = "allow"
missing_panics_doc = "allow"