[workspace]
resolver = "2"
members = [
    # Main application
    "crates/main",
    
    # Core components
    "crates/core/interfaces",
    "crates/core/context",
    "crates/core/mcp",
    "crates/core/core",
    "crates/core/plugins",
    "crates/core/auth",
    
    # Integration components (vendor-agnostic patterns)
    "crates/integration/context-adapter",
    "crates/integration/ecosystem",
    
    # Service components
    "crates/services/commands",
    
    # Tool components
    "crates/tools/ai-tools",
    "crates/tools/cli",
    "crates/tools/rule-system",
    
    # SDK components
    "crates/sdk",
    
    # Configuration
    "crates/config",
    
    # Universal
    "crates/universal-patterns",
    "crates/universal-constants",
    "crates/universal-error",
    
    # Integration (umbrella)
    "crates/integration",
    
    # Ecosystem API
    "crates/ecosystem-api",
    
    # Adapter patterns
    "crates/adapter-pattern-examples",
    "crates/adapter-pattern-tests",
]

[workspace.package]
authors = ["ecoPrimals Contributors"]
edition = "2024"
license = "AGPL-3.0-or-later"
version = "0.1.0"

[workspace.dependencies]
# Core dependencies - shared across workspace
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
futures = "0.3"
tracing = { version = "0.1", features = ["log"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
# reqwest declared below under HTTP/AI section; all crate usage is feature-gated (optional)
#
# CRYPTO: reqwest 0.12 → rustls 0.23 (pluggable crypto). ecoPrimals target: Pure Rust.
# Upgrade path: reqwest 0.12 + rustls-tls-manual-roots-no-provider + rustls-rustcrypto/aws-lc-rs.
# See docs/CRYPTO_MIGRATION.md.
url = "2.5"

# Additional common dependencies
async-recursion = "1.0"
bytes = { version = "1.5", features = ["serde"] }
regex = "1.10"
serde_yaml_ng = "0.10"
parking_lot = "0.12"
dashmap = "5.5"
semver = "1.0"

# More common dependencies
rand = "0.8"
base64 = "0.22"
nix = { version = "0.27", features = ["user"] }

# Storage and additional dependencies
tracing-subscriber = "0.3"
glob = "0.3"

# Database dependencies
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "sqlite", "uuid", "chrono"] }

# Metrics and monitoring
metrics = "0.21"
prometheus = "0.14"

# Security and additional deps
zeroize = { version = "1.7", features = ["zeroize_derive"] }
blake3 = "1.5"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
# axum/tower: optional HTTP API surface (feature-gated, off by default). Declared below.

# CLI and command dependencies
clap = { version = "4.4", features = ["derive"] }

# gRPC (prost/tonic) not used — ecoPrimals uses JSON-RPC + tarpc

# Dev and test dependencies
tokio-test = "0.4"
mockall = "0.11"
test-case = "3.0"
tempfile = "3.8"
pretty_assertions = "1.4"
test-context = "0.2"
proptest = "1.10.0"

# Benchmarking dependencies
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }

# RPC / transport (main + mcp)
tokio-util = { version = "0.7.17", features = ["full"] }
tarpc = { version = "0.37", features = ["full"] }
tokio-serde = { version = "0.8.0", features = ["bincode"] }
bincode = "1.3"
toml = "0.8"
dirs = "5.0"
hostname = "0.4"
metrics-exporter-prometheus = "0.12"
iai = "0.1"
nvml-wrapper = "0.10"

# HTTP / AI client (optional; ai-tools + mcp)
tokio-stream = { version = "0.1", features = ["sync"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
axum = { version = "0.7", features = ["json"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# mcp-specific externals
serde_bytes = "0.11"
futures-util = "0.3"
# tokio-tungstenite: REMOVED — Tower Atomic pattern; WebSocket provided by Songbird service mesh via IPC
zstd = "0.12"
flate2 = { version = "1.0", default-features = false, features = ["rust_backend"] }
lz4_flex = "0.13"

# Internal crate dependencies
squirrel-ai-tools = { path = "crates/tools/ai-tools", version = "0.1.0" }
squirrel-mcp-config = { path = "crates/config", version = "0.1.0" }
squirrel-integration = { path = "crates/integration", version = "0.1.0" }
ecosystem-api = { path = "crates/ecosystem-api", version = "0.1.0" }
squirrel-interfaces = { path = "crates/core/interfaces", version = "0.1.0" }
squirrel-context = { path = "crates/core/context", version = "0.1.0" }
universal-patterns = { path = "crates/universal-patterns", version = "0.1.0" }
universal-constants = { path = "crates/universal-constants", version = "0.1.0" }
universal-error = { path = "crates/universal-error", version = "0.1.0" }
squirrel-sdk = { path = "crates/sdk", version = "1.0.0" }
squirrel-plugins = { path = "crates/core/plugins", version = "0.1.0" }
squirrel-mcp = { path = "crates/core/mcp", version = "0.1.0" }
squirrel-mcp-auth = { path = "crates/core/auth", version = "0.1.0" }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
unused_imports = "warn"
unused_variables = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
expect_used = "warn"
unwrap_used = "warn"
cast_possible_truncation = "warn"
cast_sign_loss = "warn"
cast_precision_loss = "warn"
missing_docs_in_private_items = "allow"
module_name_repetitions = "allow"
missing_panics_doc = "allow"