[package]
name = "squirrel-mcp-config"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
tracing = "0.1"
url = "2.4"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }

# No build-time dependencies on other primals
# Coordination happens at runtime via HTTP APIs

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
tempfile = "3.8"