[package]
name = "squirrel-plugins-fuzz"
version = "0.0.0"
publish = false
edition = "2021"
authors = ["DataScienceBioLab"]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = "1.3"

# Async runtime and utilities
tokio = { version = "1.35", features = ["full", "rt", "macros"] }
futures = "0.3.30"
async-trait = "0.1.74"

# Error handling
thiserror = "1.0.50"
anyhow = "1.0.79"

# Utilities
tempfile = "3.8.1"
rand = "0.8.5"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
uuid = { version = "1.6.1", features = ["v4", "serde"] }

[dependencies.squirrel-plugins]
path = "../crates/plugins"
features = ["all"]

[dependencies.squirrel-interfaces]
path = "../crates/interfaces"

[[bin]]
name = "dynamic_library"
path = "fuzz_targets/dynamic_library.rs"
test = false
doc = false

[[bin]]
name = "plugin_command"
path = "fuzz_targets/plugin_command.rs"
test = false
doc = false
