[package]
name = "squirrel-plugins-fuzz-old"
version = "0.1.0"
edition = "2021"
authors = ["DataScienceBioLab"]
description = "Fuzzing tests for Squirrel Plugin System (Old)"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
squirrel-plugins = { path = "../crates/plugins", features = ["all"] }
squirrel-interfaces = { path = "../crates/interfaces" }
squirrel-core = { path = "../crates/core", features = ["core"] }
squirrel-mcp = { path = "../crates/mcp" }

# Fuzzing dependencies
libfuzzer-sys = "0.4"
arbitrary = "1.3"

# Async runtime and utilities
tokio = { version = "1.35", features = ["full", "rt", "macros"] }
futures = "0.3.30"
async-trait = "0.1.74"

# Error handling
thiserror = "1.0.50"
anyhow = "1.0.79"

# Utilities
tempfile = "3.8.1"
rand = "0.8.5"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
chrono = { version = "0.4.31", features = ["serde"] }
uuid = { version = "1.6.1", features = ["v4", "serde"] }

[[bin]]
name = "fuzz_dynamic_library"
path = "dynamic_library.rs"
test = false
bench = false

[[bin]]
name = "fuzz_plugin_command"
path = "plugin_command.rs"
test = false
bench = false 