[package]
name = "taskserver-standalone"
version = "0.1.0"
edition = "2021"

[workspace]

[lib]
name = "taskserver_standalone"
crate-type = ["cdylib", "rlib"]

[dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "signal", "time"] }
tonic = { version = "0.12.0", features = ["transport", "codegen", "prost", "server"] }
prost = "0.13.1"
prost-types = "0.13.1"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
uuid = { version = "1.7", features = ["v4", "serde"] }
anyhow = "1.0"
pyo3 = { version = "0.20", features = ["extension-module", "chrono"], optional = true }
pyo3-asyncio = { version = "0.20", features = ["tokio"], optional = true }
tokio-stream = "0.1.14"

[dev-dependencies]
once_cell = "1.19"

[build-dependencies]
tonic-build = { version = "0.12.0", features = ["prost"] }

[features]
default = []
python = ["pyo3", "pyo3-asyncio"]

[[bin]]
name = "taskserver"
path = "src/main.rs"

[[bin]]
name = "taskclient"
path = "src/bin/test_client.rs"

[[bin]]
name = "watchtask"
path = "src/bin/watch_task_test.rs" 