[package]
name = "test_plugin_fix"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "A test binary for debugging and fixing plugin loading issues"
license = "MIT"
repository = "https://github.com/datasciencebiolab/squirrel"
readme = "README.md"
keywords = ["test", "plugin", "debug"]
categories = ["development-tools::testing"]

[dependencies]
# Core dependencies will be added as the binary is expanded
squirrel-plugins = { path = "../crates/plugins" }
squirrel-context-adapter = { path = "../crates/context-adapter" }
anyhow = { workspace = true }

[lints]
workspace = true
