[package]
name = "adapter-pattern-tests"
version = "0.1.0"
edition = "2024"
description = "Tests for adapter pattern implementation in Rust"
license = "AGPL-3.0-or-later"
repository = "https://github.com/ecoPrimals/squirrel"
readme = "README.md"
keywords = ["ecoprimals", "ai", "mcp", "json-rpc"]
categories = ["development-tools"]

[dependencies]
async-trait = "0.1.77"
tokio = { version = "1.36.0", features = ["full"] }

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
unused_imports = "warn"
unused_variables = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
expect_used = "allow"
unwrap_used = "allow"
cast_possible_truncation = "warn"
cast_sign_loss = "warn"
cast_precision_loss = "warn"
missing_docs_in_private_items = "allow"
module_name_repetitions = "allow"
missing_panics_doc = "allow"
