[package]
name = "adapter-test"
version = "0.1.0"
edition = "2021"
authors = ["DataScienceBioLab"]
description = "Test module for adapter patterns in Rust"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1.34.0", features = ["full"] }
async-trait = "0.1.74"

# Serialization (for testing)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" 