[package]
name = "squirrel-ai-tools"
version = "0.1.0"
edition = "2021"
authors = ["DataScienceBioLab"]
description = "AI tools integration for the Squirrel system"

[[bin]]
name = "ai-config"
path = "src/bin/ai-config.rs"

[dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
futures-util = "0.3"
thiserror = "1.0"
anyhow = "1.0"

# HTTP client
reqwest = { version = "0.11", features = ["json", "stream"] }

# Security
secrecy = { version = "0.8", features = ["serde"] }
zeroize = "1.7"
base64 = "0.21"
ring = "0.17"

# Utilities
tracing = "0.1"
metrics = "0.21"
bytes = "1.5"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Rate limiting
governor = "0.6"

# Squirrel crates
squirrel-interfaces = { path = "../interfaces" }
squirrel-core = { path = "../core" }
squirrel-api-clients = { path = "../api-clients" }

# Additional dependencies
tokio-stream = "0.1"

# Configuration management
directories = "5.0"
toml = "0.8"
clap = { version = "4.0", features = ["derive"] }
tempfile = "3.8"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.2"
wiremock = "0.5"
test-context = "0.1"
tracing-test = "0.2"
tempfile = "3.8"
walkdir = "2.4"

[features]
default = ["openai"]
openai = []
anthropic = []
gemini = []
azure = [] 
