[package]
name = "squirrel_ai_tools"
version = "0.1.0"
edition = "2021"
authors = ["DataScienceBioLab"]
description = "AI tools integration for the Squirrel system"

[dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
thiserror = "1.0"
anyhow = "1.0"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Security
secrecy = "0.8"
base64 = "0.21"
ring = "0.17"

# Utilities
tracing = "0.1"
metrics = "0.21"
bytes = "1.5"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Rate limiting
governor = "0.6"

# Squirrel crates
squirrel_interfaces = { path = "../interfaces" }
squirrel_core = { path = "../core" }
squirrel_api_clients = { path = "../api_clients" }

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.2"
wiremock = "0.5"
test-context = "0.1"
tracing-test = "0.2"

[features]
default = ["openai"]
openai = []
anthropic = []
gemini = []
azure = [] 