[package]
name = "squirrel-app"
version = "0.1.0"
edition = "2021"
authors.workspace = true
description = "Application components for Squirrel"

[dependencies]
# Core dependencies
tokio = { version = "1.36", features = ["full"] }
futures = { workspace = true }
async-trait = "0.1"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { workspace = true }
tracing = "0.1"
tracing-subscriber = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
clap = { version = "4.5", features = ["derive"] }
log = "0.4"

# Shared squirrel dependencies
squirrel-core = { path = "../core" }
squirrel-context = { path = "../context" }
squirrel-monitoring = { path = "../monitoring" }
squirrel-mcp = { path = "../mcp" }
squirrel-commands = { path = "../commands" }

[dev-dependencies]
tokio-test = "0.4"
tempfile = { workspace = true }
mockall = { workspace = true }

[lib]
name = "squirrel_app"
path = "src/lib.rs" 