[package]
name = "squirrel-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Command-line interface for Squirrel"

[dependencies]
# Core dependencies
tokio = { version = "1.35.1", features = ["full"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }

# Squirrel crates
squirrel-core = { path = "../core" }
squirrel-commands = { path = "../commands" }
log = "0.4.20"
simple_logger = "4.3.3"

[[bin]]
name = "squirrel"
path = "src/bin/squirrel.rs"

[dev-dependencies]
assert_cmd = "2.0.14" 