[package]
name = "squirrel-cli"
version = "0.1.0"
edition = "2021"
description = "Command-line interface for the Squirrel platform"
authors = ["DataScienceBioLab"]
license = "MIT"

[dependencies]
# Internal crates
squirrel-commands = { path = "../commands" }
squirrel-core = { path = "../core" }

# Async runtime
tokio = { version = "1.36", features = ["full"] }

# Command-line parsing
clap = { version = "4.4", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
yaml-rust = "0.4"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
log = "0.4"
fern = "0.6"

# Utility
directories = "5.0"
tempfile = "3.8"
chrono = "0.4"
colored = "2.0"
regex = "1.10"
prettytable-rs = "0.10"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"

[[bin]]
name = "squirrel"
path = "src/main.rs" 