[package]
name = "squirrel-commands"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Command system for Squirrel"

[dependencies]
# Core dependencies
tokio = { workspace = true, features = ["full"] }
futures = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
regex = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sysinfo = "0.30.0"

# Shared squirrel dependencies
squirrel-core = { path = "../core" }

[dev-dependencies]
tokio-test = { workspace = true }
mockall = { workspace = true }

[lib]
name = "squirrel_commands"
path = "src/lib.rs" 