[package]
name = "squirrel-commands"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime and utilities
tokio = { version = "1.36", features = ["full"] }
futures = "0.3"

# Command line argument parsing
clap = { version = "4.5", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging and time
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }

# Authentication dependencies
argon2 = { version = "0.5", features = ["std"] }

# Additional dependencies
regex = "1.10"
sysinfo = "0.30"
uuid = { version = "1.0", features = ["v4", "serde"] }
tempfile = "3.8"
simple_logger = "4.2"
log = "0.4"

# Internal dependencies
squirrel-core = { path = "../core" }

[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = "1.4" 