[package]
name = "squirrel-mcp-config"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
url = "2.4"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
# HTTP client (OPTIONAL - for config fetching from HTTP endpoints)
# Production uses Unix sockets or local files (Pure Rust!)
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"], optional = true }
tokio = { version = "1.0", features = ["full"] }
once_cell = "1.19"
universal-constants = { path = "../universal-constants" }

# No build-time dependencies on other primals
# Coordination happens at runtime via HTTP APIs

[features]
# Production default: local config files (Pure Rust!)
default = []
# HTTP config fetching (brings reqwest → rustls → ring)
http-config = ["dep:reqwest"]

[dev-dependencies]
tempfile = "3.8"
serial_test = "3.0"