[package]
name = "squirrel-mcp-config"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
description = "Configuration types and loading for Squirrel MCP"
repository = "https://github.com/ecoPrimals/squirrel"
readme = "README.md"
keywords = ["ecoprimals", "ai", "mcp", "json-rpc"]
categories = ["development-tools"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml_ng = "0.10"
toml = "0.8"
thiserror = "1.0"
tracing = "0.1"
uuid = { version = "1.0", features = ["v4"] }
# HTTP client (OPTIONAL - for config fetching from HTTP endpoints)
# Production uses Unix sockets or local files (Pure Rust!)
#
# CRYPTO MIGRATION (ecoPrimals: Pure Rust): reqwest 0.12 → rustls 0.23 (pluggable crypto).
# Upgrade path: reqwest 0.12 + rustls-tls-manual-roots-no-provider + custom crypto provider.
# See docs/CRYPTO_MIGRATION.md.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }
# once_cell removed - evolved to std::sync::OnceLock/LazyLock (stable Rust 1.80+)
universal-constants = { path = "../universal-constants", version = "0.1.0" }
dirs = "5.0" # For platform-agnostic directory resolution
zeroize.workspace = true

# No build-time dependencies on other primals
# Coordination happens at runtime via HTTP APIs

[features]
# Production default: local config files (Pure Rust!)
default = []
# HTTP config fetching (brings reqwest → rustls → ring)
http-config = ["dep:reqwest"]

[dev-dependencies]
tempfile = "3.8"
serial_test = "3.0"
temp-env = "0.3"

[lints]
workspace = true
