[package]
name = "squirrel-mcp-config"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
description = "Configuration types and loading for Squirrel MCP"
repository = "https://github.com/ecoPrimals/squirrel"
readme = "README.md"
keywords = ["ecoprimals", "ai", "mcp", "json-rpc"]
categories = ["development-tools"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml_ng = "0.10"
toml.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
universal-constants = { path = "../universal-constants", version = "0.1.0" }
dirs.workspace = true
zeroize.workspace = true

# No build-time dependencies on other primals
# Coordination happens at runtime via HTTP APIs

[features]
# Production default: local config files (Pure Rust!)
default = []
## http-config removed (stadial gate: reqwest lockfile ghost eliminated)

[dev-dependencies]
tempfile = "3.8"
serial_test = "3.0"
temp-env = "0.3"

[lints]
workspace = true
